# pyfx2adc

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake-compat.nix  flake.nix  fx2adc.nix  nixos-firmware.patch  pyfx2adc.nix  pyproject.toml  sigrok-firmware.nix
pyfx2adc/: __init__.py
src/: pyfx2adc_module.cpp
tests/: test_smoke.py
